# tdd-project

./: .env  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  makefile  pyproject.toml
tdd-project/: .env  pyvenv.cfg
tdd-project/Scripts/: activate  activate.bat  activate.fish
tdd-project/store/: main.py
tdd-project/store/controllers/: product.py
tdd-project/store/core/: config.py  exceptions.py
tdd-project/store/models/: base.py  product.py
tdd-project/store/schemas/: base.py  product.py
tdd-project/store/usecasses/: product.py
tdd-project/tests/: confitest.py  factories.py
tdd-project/tests/controllers/: test_product.py
tdd-project/tests/schemas/: tests_product.py
tdd-project/tests/usecasses/: test_product.py
